fix start banner, modal window z-index, created archive page

--- a/src/shared/ui-kit/modal/modal.module.scss
+++ b/src/shared/ui-kit/modal/modal.module.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.32);
-  z-index: 1;
+  z-index: 999;
 }
 
 .modal {
@@ -71,7 +71,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  min-height: 200px;
+  // min-height: 200px;
   min-width: 320px;
   width: 100%;
   height: 100%;
